integration_tests/tests/compile/fail_ulogdata_unnamed.rs
use yule_log::ULogData;

#[derive(ULogData)]
pub struct TupleStruct(u64, f32);

fn main() {}
